[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mobius-units"
version = "0.1.0"
description = "Fundamental constants and unit conversions from the eigenvalue tower — one measurement derives them all."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["mobius-constant>=0.1.0,<1.0.0"]
authors = [
    { name = "Jay Carpenter" },
]
keywords = [
    "fundamental-constants",
    "unit-conversion",
    "CODATA",
    "Rydberg",
    "fine-structure",
    "Planck-units",
    "atomic-units",
    "natural-units",
    "dimensional-analysis",
    "mobius",
    "alpha",
    "precision",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/JustNothingJay/mobius-units"
Repository = "https://github.com/JustNothingJay/mobius-units"
Issues = "https://github.com/JustNothingJay/mobius-units/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mobius_units"]

[tool.pytest.ini_options]
testpaths = ["tests"]
